--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -200,10 +200,20 @@ section {
 .properties {
 	padding: 0px 0 100px;
 }
+
 .leading {
 	margin-top: 62px;
 	@include breakpoint($medium) {
 		margin-top: 78px;
+	}
+	&.property-page {
+		margin-top: 15px;
+		@include breakpoint($small) {
+			margin-top: 62px;
+		}
+		@include breakpoint($medium) {
+			margin-top: 78px;
+		}
 	}
 }
 
