--- a/src/scss/modules/_property_tiles.scss
+++ b/src/scss/modules/_property_tiles.scss
@@ -7,7 +7,10 @@
 		min-height: 100%;
 	}
 	section {
-		padding-top: 54px;
+		padding-top: 15px;
+		@include breakpoint($tiny) {
+			padding-top: 54px;
+		}
 		a {
 			margin: 0;
 		}
@@ -105,10 +108,15 @@
 		}
 	}
 	.image-wrap {
-		@include span(4 of 8 no-gutter);
+		@include span(5 of 8 no-gutter);
 		position: relative;
 		overflow: hidden;
-		height: 300px;
+		height: 270px;
+		@include breakpoint($tiny) {
+			@include span(4 of 8 no-gutter);
+			height: 300px;
+		}
+		
 	}
 	.preview-image {
 		height: 100%;
@@ -141,16 +149,18 @@
 			display: block;
 		}
 		.prop-title {
-			@include btiny($hFontMI);
+			@include hbase($hFontMI);
 			@include breakpoint($tiny) {
 				@include hsmedium($hFontMI);
 			}
 		}
 		.prop-price, .bottom-info, .prop-details,.prop-location,.price,.currency,.ownership, .sqft-details {
 			@include hmin($hFontM);
+			line-height: 18px;
 			@include breakpoint($tiny) {
 				@include hsmall($hFontM);
 				font-weight: 500;
+				line-height: 26px;
 			}
 			
 		}
