--- a/src/scss/modules/_social.scss
+++ b/src/scss/modules/_social.scss
@@ -7,6 +7,21 @@
 			display: block;
 			width: 100%;
 		}
+		&.desktop {
+			display: none;
+			@include breakpoint($medium){
+				display: inline-block;
+				position: absolute;
+				right: 0;
+				margin: 0;
+			}
+		}
+		&.mobile {
+			display: block;
+			@include breakpoint($medium){
+				display: none;
+			}
+		}
 		a {
 			display: inline-block;
 			position: relative;
@@ -34,6 +49,9 @@
 			a {
 				margin-left: 5px;
 			}
+		}
+		&.center-align {
+			text-align: center;
 		}
 		&.gray {
 			@include social(32px, $light-font-color);
