additional property changes

--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -85,6 +85,14 @@
 					display: inline-block;
 				}
 			}
+			&.oh-divider {
+				color: $red;
+				display: none;
+				padding: 0 10px;
+				@include breakpoint($medium) {
+					display: inline-block;
+				}
+			}
 		}
 
 	}
