--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -5863,6 +5863,15 @@ footer .footer-divider {
   .property-info .open-house span.red {
     display: inline-block; } }
 
+.property-info .open-house span.oh-divider {
+  color: #FF0000;
+  display: none;
+  padding: 0 10px; }
+
+@media (min-width: 992px) {
+  .property-info .open-house span.oh-divider {
+    display: inline-block; } }
+
 .dotted {
   border-bottom: 1px dotted #999999;
   vertical-align: bottom;
