--- a/statamic/_themes/main/templates/property.html
+++ b/statamic/_themes/main/templates/property.html
@@ -101,12 +101,12 @@
 					{{ openhouse_grid }}
 					{{ if date|not_empty }}
 					{{ if first }}
-						<span class="red">Open House{{ if total_results > 1 }}s{{ endif }}:</span> <span class="red">{{date format="D, m/j" }}, {{startTime}} - {{ endTime }}</span>
+						<span class="red">Open <i class="fa fa-home"></i>:</span> <span class="red">{{date format="D, m/j" }}, {{startTime}} - {{ endTime }}
 					{{ else }}
-						<span class="red"> {{date format="D, m/j" }}, {{startTime}} - {{ endTime }}</span>
+						</span><span class="oh-divider">|</span><span class="red"> {{date format="D, m/j" }}, {{startTime}} - {{ endTime }}</span>
 					{{ endif }}
 					{{ else }}
-					<span class="red">Open House: Enquire for Details</span>
+					<span class="red">Open <i class="fa fa-home"></i>: Enquire for Details</span>
 					{{ endif }}
 					{{ /openhouse_grid }}
 					{{ elseif streeteasy_status != "active" }}
