additional property changes

--- a/statamic/_themes/main/templates/property.html
+++ b/statamic/_themes/main/templates/property.html
@@ -101,9 +101,9 @@
 					{{ openhouse_grid }}
 					{{ if date|not_empty }}
 					{{ if first }}
-						<span class="red">Open <i class="fa fa-home"></i>:</span> <span class="red">{{date format="D, m/j" }}, {{startTime}} - {{ endTime }}
+						<span class="red">Open <i class="fa fa-home"></i> -</span> <span class="red">{{date format="l, F jS" }}: {{startTime}} - {{ endTime }}
 					{{ else }}
-						</span><span class="oh-divider">|</span><span class="red"> {{date format="D, m/j" }}, {{startTime}} - {{ endTime }}</span>
+						</span><span class="oh-divider">|</span><span class="red"> {{date format="l, F jS" }}: {{startTime}} - {{ endTime }}</span>
 					{{ endif }}
 					{{ else }}
 					<span class="red">Open <i class="fa fa-home"></i>: Enquire for Details</span>
