--- a/statamic/_themes/main/partials/modal_contact.html
+++ b/statamic/_themes/main/partials/modal_contact.html
@@ -13,6 +13,7 @@
         <div class="input-clear">
           <div class="form">
             <input class="input" placeholder="Listing Address" type="text" name="address" value="{{ value:address }}">
+            <input type="text" name="website" class="website" />
           </div>
           <div class="form">
             <input class="input" placeholder="First &amp; Last Name" type="text" name="name" value="{{ value:name }}">
