--- a/statamic/_themes/main/partials/modal_listing.html
+++ b/statamic/_themes/main/partials/modal_listing.html
@@ -17,6 +17,7 @@
           </div>
           <div class="form">
             <input class="input" placeholder="Email Address" type="text" name="email" >
+            <input type="text" name="website" class="website" />
           </div>
           <div class="form">
             <input class="input" placeholder="Mobile Number" type="text" name="phone_mobile" >
