--- a/statamic/_themes/main/partials/modal_valuation.html
+++ b/statamic/_themes/main/partials/modal_valuation.html
@@ -22,6 +22,7 @@
           </div>
           <div class="form">
             <input class="input" placeholder="Email Address" type="text" name="email" value="{{ value:email }}">
+            <input type="text" name="website" class="website" />
           </div>
         </div>
         <div class="submit">
