--- a/statamic/_themes/main/templates/property.html
+++ b/statamic/_themes/main/templates/property.html
@@ -65,11 +65,13 @@
 			<div class="property-info">
 
 				<div class="property-top-bar">
-<div class="location-granular"><span>{{ property_location }}</span>
-	{{ if location_granular|not_empty }}
-	<span class="divider"></span>
-	<span>{{ location_granular }}</span>
-	{{ endif }}</div>
+					<div class="location-granular"><span>
+						{{ property_location }}</span>
+						{{ if location_granular|not_empty }}
+						<span class="divider"></span>
+						<span>{{ location_granular }}</span>
+						{{ endif }}
+					</div>
 					<div class="social desktop right-align gray">
 						<a href="mailto:?subject={{ title }} - Property Found on lesliegarfield.com&body={{ _site_url }}{{ url }}">
 							<i class="fa fa-envelope fa-lg"></i>
@@ -96,7 +98,7 @@
 				</div>
 	
 				{{ if openhouse == "true" or streeteasy_status !== "active" }}
-				<div class="open-house">
+				<div class="open-house desktop">
 					{{ if openhouse == "true" }}
 					{{ openhouse_grid }}
 					{{ if date|not_empty }}
@@ -123,7 +125,84 @@
 					</div>
 					{{ /photo_carousel}}
 				</div>
+
 				<div class="details-small">
+				{{ if openhouse == "true" or streeteasy_status !== "active" }}
+				<div class="open-house mobile">
+				
+					{{ if openhouse == "true" }}
+					{{ openhouse_grid }}
+					{{ if date|not_empty }}
+					{{ if first }}
+						<span class="red">Open <i class="fa fa-home"></i> -</span> <span class="red">{{date format="l, F jS" }}: {{startTime}} - {{ endTime }}</span>
+					{{ else }}
+						</span><span class="oh-divider">|</span><span class="red"> {{date format="l, F jS" }}: {{startTime}} - {{ endTime }}</span>
+					{{ endif }}
+					{{ else }}
+					<span class="red">Open <i class="fa fa-home"></i>: Enquire for Details</span>
+					{{ endif }}
+					{{ /openhouse_grid }}
+					{{ elseif streeteasy_status != "active" }}
+					<span>{{ if streeteasy_status == "in-contract"}}In Contract{{ elseif streeteasy_status == "sold" }}Sold{{ endif }}</span>
+					{{ endif }}
+				</div>	
+				{{ endif }}
+					<div class="dotted"></div>
+					<div class="agent property-schedule">
+						<a data-toggle="modal" data-target="#viewing-modal" href="#" class="btn btn-garfield">Schedule a viewing</a>
+					</div>
+					<div class="dotted"></div>
+				<div class="green-specs">
+					<div class="specs">
+						<div class="title">
+							{{ theme:partial src="svg/glasses" }}
+							<span>SPECIFICATIONS</span>
+						</div>
+
+						{{ theme:partial src="green_specs" use_context="true" }}
+
+					</div>
+					<div class="location_features">
+						<div class="title">
+							{{ theme:partial src="svg/maps" }}
+							<span>LOCATION</span>
+						</div>
+						<ul>
+							<li>{{ location_granular }}</li>
+						</ul>
+						<div class="title">
+							{{ theme:partial src="svg/stars" }}
+							<span>KEY FEATURES</span>
+						</div>
+						
+						<ul>
+
+							{{ if amenities }}
+							{{ amenities }}
+							{{ if value =="washerDryer" }}
+							<li>Washer / Dryer</li>
+							{{ else }}
+							<li>{{ value|ucfirst }}</li>
+							{{ endif }}
+							{{ /amenities }}
+							{{ endif }}
+							
+							{{ key_features }}
+							<li>{{ value }}</li>
+							{{ /key_features }}
+
+						</ul>
+					</div>
+				</div>
+				<div class="summary mobile">
+					{{ summary_intro }}
+					{{ if summary_full|not_empty }}
+					<div style="display: none">
+						{{ summary_full }}
+					</div>
+					<a class="read-more-expander expander-prev block" href=""><i  class="fa fa-plus-circle green"></i><span>Read More</span></a>
+					{{ endif }}
+				</div>
 					<div class="agent-internal">
 						<div class="agent property-agents">
 							{{ relate:agents }}
@@ -180,56 +259,12 @@
 						<i class="fa fa-facebook fa-lg"></i>
 					</a>
 				</div>
-					<div class="dotted"></div>
-					<div class="agent property-schedule">
-						<a data-toggle="modal" data-target="#viewing-modal" href="#" class="btn btn-garfield">Schedule a viewing</a>
-					</div>
+
 				</div>
-				<div class="green-specs">
-					<div class="specs">
-						<div class="title">
-							{{ theme:partial src="svg/glasses" }}
-							<span>SPECIFICATIONS</span>
-						</div>
 
-						{{ theme:partial src="green_specs" use_context="true" }}
-
-					</div>
-					<div class="location_features">
-						<div class="title">
-							{{ theme:partial src="svg/maps" }}
-							<span>LOCATION</span>
-						</div>
-						<ul>
-							<li>{{ location_granular }}</li>
-						</ul>
-						<div class="title">
-							{{ theme:partial src="svg/stars" }}
-							<span>KEY FEATURES</span>
-						</div>
-						
-						<ul>
-
-							{{ if amenities }}
-							{{ amenities }}
-							{{ if value =="washerDryer" }}
-							<li>Washer / Dryer</li>
-							{{ else }}
-							<li>{{ value|ucfirst }}</li>
-							{{ endif }}
-							{{ /amenities }}
-							{{ endif }}
-							
-							{{ key_features }}
-							<li>{{ value }}</li>
-							{{ /key_features }}
-
-						</ul>
-					</div>
-				</div>
 
 				
-				<div class="summary">
+				<div class="summary desktop">
 					{{ summary_intro }}
 					{{ if summary_full|not_empty }}
 					<div style="display: none">
