fixed green specs

--- a/statamic/_themes/main/templates/property.html
+++ b/statamic/_themes/main/templates/property.html
@@ -244,7 +244,7 @@
 					<a class="read-more-expander expander-prev block" href=""><i  class="fa fa-plus-circle green"></i><span>Read More</span></a>
 					{{ endif }}
 				</div>
-				<div class="dotted"></div>
+				<div class="dotted" style="margin-top: 15px;"></div>
 					<div class="agent-internal">
 						<div class="agent property-agents">
 							{{ relate:agents }}
